--- a/workflowui/dashboard/templates/base.html
+++ b/workflowui/dashboard/templates/base.html
@@ -22,7 +22,10 @@
 
     <!-- SCRIPTS -->
     <script type="text/javascript" src="{% static 'third-party/jquery/jquery-2.1.3.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'third-party/jquery/jquery.tmpl.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'third-party/bootstrap/js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/workflowui.js' %}"></script>
+    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
 
     {% block extra-head %}{% endblock extra-head %}
   </body>
