Connectors between task nodes.

--- a/workflowui/dashboard/templates/home.html
+++ b/workflowui/dashboard/templates/home.html
@@ -3,64 +3,57 @@
 {% block extra-head %}
   <script type="text/javascript">
     var viewport = new WorkflowViewPort('#workflow-area');
-    viewport.addTaskItem({
-      "name": "task03",
-      "def": "builtin.dummy",
-      "inputs": {
-        "y": {
-          "src": "taskout",
-          "key": "task01.a"
+
+    var tasks = [
+      {
+        "name": "task03",
+        "def": "builtin.dummy",
+        "inputs": {
+          "y": {
+            "src": "taskout",
+            "key": "task01.a"
+          },
         },
-        "z": {
-          "src": "context",
-          "key": "engine.start_time"
-        },
-        "x": {
-          "src": "properties",
-          "key": "hello.world"
+        "dependencies": [
+          "task01",
+          "task02"
+        ],
+        "ui": {
+          "x": 100,
+          "y": 100,
+          "width": 250,
+          "height": 80,
+          "selected": false,
+          "port_radius": 4,
+          "port_spacing": 20
         }
       },
-      "dependencies": [
-        "task01",
-        "task02"
-      ],
-      "ui": {
-        "x": 100,
-        "y": 100,
-        "width": 250,
-        "height": 80,
-        "selected": false
-      }
-    });
-    viewport.addTaskItem({
-      "name": "task01",
-      "def": "builtin.dummy",
-      "inputs": {
-        "y": {
-          "src": "taskout",
-          "key": "task01.a"
+      {
+        "name": "task01",
+        "def": "builtin.dummy",
+        "inputs": {
         },
-        "z": {
-          "src": "context",
-          "key": "engine.start_time"
-        },
-        "x": {
-          "src": "properties",
-          "key": "hello.world"
+        "outputs": [
+          "a",
+          "b"
+        ],
+        "dependencies": [
+          "task01",
+          "task02"
+        ],
+        "ui": {
+          "x": 0,
+          "y": 0,
+          "width": 250,
+          "height": 80,
+          "selected": false,
+          "port_radius": 4,
+          "port_spacing": 20
         }
-      },
-      "dependencies": [
-        "task01",
-        "task02"
-      ],
-      "ui": {
-        "x": 0,
-        "y": 0,
-        "width": 250,
-        "height": 80,
-        "selected": false
       }
-    });
+    ]
+    viewport.addTasks(tasks);
+    viewport.renderConnectors();
   </script>
 {% endblock extra-head %}
 
