--- a/workflowui/static/css/_workflowui.scss
+++ b/workflowui/static/css/_workflowui.scss
@@ -1,10 +1,14 @@
-$selected-color: #3F9EDD;
+$selected-color: #3498DB;
+$input-port-color: #40D47E;
+$output-port-color: #E74C3C;
+$connector-color: #e67e22;
 
 .task-node {
   width: 250px;
   height: 80px;
   padding: 15px;
   border: 1px solid #DDD;
+  background-color: #FFF;
   @include border-radius(2px);
   @include transition(all 0.3s);
 
@@ -31,4 +35,18 @@ $selected-color: #3F9EDD;
 .task-node__def {
   font-size: 12px;
   color: #888;
+}
+
+.task-node__inputport {
+  fill: $input-port-color;
+}
+
+.task-node__outputport {
+  fill: $output-port-color;
+}
+
+.task-node-connector {
+  fill: none;
+  stroke: $connector-color;
+  stroke-width: 1px;
 }
