--- a/workflowui/static/css/style.css
+++ b/workflowui/static/css/style.css
@@ -3,6 +3,7 @@
   height: 80px;
   padding: 15px;
   border: 1px solid #DDD;
+  background-color: #FFF;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   -ms-border-radius: 2px;
@@ -13,13 +14,13 @@
   -o-transition: all 0.3s;
   transition: all 0.3s; }
   .task-node:hover {
-    border-color: #3F9EDD;
+    border-color: #3498DB;
     cursor: pointer; }
   .task-node.task-node--selected {
-    border-color: #3F9EDD;
+    border-color: #3498DB;
     border-bottom-width: 2px; }
     .task-node.task-node--selected .task-node__name {
-      color: #3F9EDD; }
+      color: #3498DB; }
 
 .task-node__name {
   font-size: 20px;
@@ -30,6 +31,17 @@
   font-size: 12px;
   color: #888; }
 
+.task-node__inputport {
+  fill: #40D47E; }
+
+.task-node__outputport {
+  fill: #E74C3C; }
+
+.task-node-connector {
+  fill: none;
+  stroke: #e67e22;
+  stroke-width: 1px; }
+
 body {
   position: relative;
   height: 100vh; }
@@ -39,6 +51,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0; }
+  bottom: 0;
+  background-image: url("../img/noisy_grid.png"); }
 
 /*# sourceMappingURL=style.css.map */
