Creating new connections between task nodes

--- a/workflowui/dashboard/templates/home.html
+++ b/workflowui/dashboard/templates/home.html
@@ -13,6 +13,10 @@
             "src": "taskout",
             "key": "task01.a"
           },
+          "x": {
+            "src": "properties",
+            "key": "hello"
+          },
         },
         "dependencies": [
           "task01",
@@ -51,7 +55,7 @@
           "port_spacing": 20
         }
       }
-    ]
+    ];
     viewport.addTasks(tasks);
     viewport.renderConnectors();
   </script>
