--- a/workflowui/dashboard/templates/home.html
+++ b/workflowui/dashboard/templates/home.html
@@ -14,8 +14,8 @@
             "key": "task01.a"
           },
           "x": {
-            "src": "properties",
-            "key": "hello"
+            "src": "",
+            "key": ""
           },
         },
         "dependencies": [
@@ -29,6 +29,7 @@
           "height": 80,
           "selected": false,
           "port_radius": 4,
+          "port_hover_radius": 6,
           "port_spacing": 20
         }
       },
@@ -52,6 +53,7 @@
           "height": 80,
           "selected": false,
           "port_radius": 4,
+          "port_hover_radius": 6,
           "port_spacing": 20
         }
       }
