--- a/workflowui/static/css/style.scss
+++ b/workflowui/static/css/style.scss
@@ -10,6 +10,10 @@ body {
   height: 100vh;
 }
 
+.modal-dialog {
+  z-index: 100000;
+}
+
 .workflow-window {
   position: absolute;
   top: 0;
@@ -48,8 +52,35 @@ body {
   }
 }
 
+.add-task-button {
+  display: inline-block;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  padding: 15px;
+  line-height: 15px;
+  text-align: center;
+  background-color: $success-color;
+  color: #FFF;
+  border-radius: 50%;
+  opacity: 0.8;
+  &:hover, &:active, &:focus {
+    opacity: 1;
+    color: #FFF;
+    text-decoration: none;
+  }
+}
+
 .properties-form {
   padding: 15px;
+
+  &.properties-form--large {
+    label {
+      font-size: 14px;
+    }    
+  }
 }
 
 .properties-form__heading {
