--- a/workflowui/dashboard/templates/home.html
+++ b/workflowui/dashboard/templates/home.html
@@ -68,8 +68,45 @@
 
 {% block content %}
   <div id="workflow-window" class="workflow-window">
-    <div class="workflow-area" id="workflow-area"></div>
+    <div class="workflow-area" id="workflow-area">
+      <a class="add-task-button" href="#">
+        <i class="ti-plus"></i>
+      </a>
+    </div>
     <div class="workflow-properties" id="workflow-properties"></div>
+  </div>
+  <div id="modal-new-task" class="modal fade bs-example-modal-sm">
+    <div class="modal-dialog">
+      <form class="properties-form properties-form--large add-new-task">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title">Add new task</h4>
+          </div>
+          <div class="modal-body">
+            <div class="properties-form__field">
+              <div class="properties-label">
+                <label>Name</label>
+              </div>
+              <div class="properties-input">
+                <input name="name" class="form-control input-sm" type="text" />
+              </div>
+            </div>
+            <div class="properties-form__field">
+              <div class="properties-label">
+                <label>Def</label>
+              </div>
+              <div class="properties-input">
+                <input name="def" class="form-control input-sm" type="text" />
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <input type="submit" class="btn btn-success" value="Create Task" />
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
   <script type="text/template" id="tmpl-task-node">
     {% verbatim %}
