Changing background image.

--- a/workflowui/static/css/style.scss
+++ b/workflowui/static/css/style.scss
@@ -20,7 +20,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url('../img/noisy_grid.png');
+  background-image: url('../img/tiny_grid.png');
 
   .workflow-area {
     position: absolute;
