--- a/workflowui/static/css/style.css
+++ b/workflowui/static/css/style.css
@@ -59,7 +59,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url("../img/noisy_grid.png"); }
+  background-image: url("../img/tiny_grid.png"); }
   .workflow-window .workflow-area {
     position: absolute;
     top: 0;
