--- a/workflowui/dashboard/templates/home.html
+++ b/workflowui/dashboard/templates/home.html
@@ -23,7 +23,6 @@
           "outputs": [],
           "dependencies": [
             "task01",
-            "task02"
           ],
           "ui": {
             "x": 100,
@@ -45,10 +44,7 @@
             "a",
             "b"
           ],
-          "dependencies": [
-            "task01",
-            "task02"
-          ],
+          "dependencies": [],
           "ui": {
             "x": 0,
             "y": 0,
