--- a/workflowui/dashboard/templates/base.html
+++ b/workflowui/dashboard/templates/base.html
@@ -16,6 +16,28 @@
     {% block head %}{% endblock head %}
   </head>
   <body>
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Cloud Task Manager</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="">Workflows</a></li>
+            <li><a href="">Monitor</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     {% block header %}{% endblock header %}
     {% block content %}{% endblock content %}
     {% block footer %}{% endblock footer %}
