Added mechanism to provide task type list and metadata.

--- a/workflowui/static/css/style.scss
+++ b/workflowui/static/css/style.scss
@@ -16,10 +16,10 @@ body {
 
 .workflow-window {
   position: absolute;
-  top: 0;
+  top: 60px;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 5px;
   background-image: url('../img/tiny_grid.png');
 
   .workflow-area {
