Few more enhancements.

--- a/workflowui/dashboard/templates/base.html
+++ b/workflowui/dashboard/templates/base.html
@@ -18,7 +18,7 @@
   <body>
 
     <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
+      <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span>
@@ -31,8 +31,8 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="">Workflows</a></li>
-            <li><a href="">Monitor</a></li>
+            <li><a href="{% url "workflow:list" %}">Workflows</a></li>
+            <li><a href="{% url "workflow:mlist" %}">Monitor</a></li>
           </ul>
         </div>
       </div>
