Added new logic.

--- a/workflowui/workflows/templates/workflows/list.html
+++ b/workflowui/workflows/templates/workflows/list.html
@@ -17,5 +17,7 @@
         </div>
       </div>
     {% endfor %}
+    <hr/>
+    <a href="{% url 'workflow:new' %}" class="btn btn-primary">Create workflow</a>
   </div>
 {% endblock content %}
