--- a/workflowui/workflows/templates/workflows/edit.html
+++ b/workflowui/workflows/templates/workflows/edit.html
@@ -76,7 +76,7 @@
   <script type="text/template" id="tmpl-task-properties">
     {% verbatim %}
       <div>
-        <form class="properties-form">
+        <div class="properties-form">
           <div class="properties-form__heading">
             ${task.name}
           </div>
@@ -186,7 +186,10 @@
               No dependencies defined
             </div>
           {{/if}}
-        </form>
+          <div class="text-right">
+            <a href="#" data-name="${task.name}" class="btn btn-danger btn-sm delete-task-node">Delete Task</a>
+          </div>
+        </div>
       </div>
     {% endverbatim %}
   </script>
