--- a/workflowui/workflows/templates/workflows/monitor.html
+++ b/workflowui/workflows/templates/workflows/monitor.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load jsonify %}
 
 {% block content %}
   <div class="container" style="margin-top: 80px;">
@@ -29,6 +30,12 @@
         </tr>
       </tbody>
       </table>
+    </div>
+    <div class="col-md-6">
+      <h5>Properties</h5>
+      <code>
+        {{ workflow_run.properties|jsonify }}
+      </code>
     </div>
 
     <div style="clear: both;"></div>
